...
    @State private var fishstart = ["dragable": true, "show": true]
    @State private var step = 0
    
    var body: some View {
        NavigationStack {
            ZStack {
                Image("BgQuest")
                    .resizable()
                    .ignoresSafeArea(.all)
                VStack {
                    QuestionBox(
                        questionNumber: data[1].id,
                        question: data[1].stepQuestion[step]
                    ).padding(.top, 15)
                    HStack {
                        Image("Cat")
                            .resizable()
                            .scaledToFit()
                            .frame(width: 120)
                            .offset(y: -10)
                        Spacer()
                    }
                    .padding()
                    Spacer()
                }
                Image("bowl")
                    .resizable()
                    .scaledToFit()
                    .frame(width: 240)
                    .position(x: basketPos[0], y: basketPos[1])
                VStack {
                    Spacer()
...
            }
        }
    }
}

struct InfoBox2: View {
    var text: String = "Masukkan Ikan kedalam mangkuk!"
    
    var body: some View {
        RoundedRectangle(cornerRadius: 25)
            .fill(Color("Green"))
            .frame(height: 50)
            .overlay(
                HStack {
                    Image("HintIcon")
                        .resizable()
                        .scaledToFit()
                        .frame(height: 30)
                    Text(text)
                        .font(.system(size: 16, weight: .bold, design: .rounded))
                        .foregroundColor(.black)
...
